src/objects/pse__Time_Period__c.object
<CustomObject>
    <customHelpPage>pse__TimePeriodHelp</customHelpPage>
    <description>The divisions of time that your services organization is concerned with. Time periods have types such as Month (e.g. November 2014), Quarter (e.g. Q4 2014), Year (e.g. 2014), or Perpetual (‘All Time’). Time periods drive how actuals are categorized, how forecasting is done, how billing events are generated, and most other time-specific functions within FinancialForce PSA. Always create one perpetual time period with an end date well into the future.</description>
    <fields>
        <fullName>TimePeriodCode__c</fullName>
        <description>For months: FY2015-01 for the first fiscal month in fiscal 2015. For quarters: FY2015Q1 for the first quarter in fiscal 2015. For years: FY2015 for fiscal 2015.</description>
        <inlineHelpText>For months: FY2015-01 for the first fiscal month in fiscal 2015. For quarters: FY2015Q1 for the first quarter in fiscal 2015. For years: FY2015 for fiscal 2015.</inlineHelpText>
        <label>Time Period Code</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perpetual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SemiMonthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Time Period</label>
    <nameField>
        <label>Time Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Time_Period_Code_is_in_expected_format</fullName>
        <active>true</active>
        <description>For months: FY2015-01 for the first fiscal month in fiscal 2015. For quarters: FY2015Q1 for the first quarter in fiscal 2015. For years: FY2015 for fiscal 2015.</description>
        <errorConditionFormula>NOT(
   IF(
      text(pse__Type__c)=&apos;Month&apos;,
      AND(
         len(TimePeriodCode__c)=9,
         left(TimePeriodCode__c,2)=&apos;FY&apos;,
         isnumber(mid(TimePeriodCode__c,3,4)),
         mid(TimePeriodCode__c,7,1)=&apos;-&apos;,
         isnumber(right(TimePeriodCode__c,2))
      ),
   IF(
      text(pse__Type__c)=&apos;Quarter&apos;,
      AND(
         len(TimePeriodCode__c)=8,
         left(TimePeriodCode__c,2)=&apos;FY&apos;,
         isnumber(mid(TimePeriodCode__c,3,4)),
         mid(TimePeriodCode__c,7,1)=&apos;Q&apos;,
         isnumber(right(TimePeriodCode__c,1))
      ),
   IF(
      text(pse__Type__c)=&apos;Year&apos;,
      AND(
         len(TimePeriodCode__c)=6,
         left(TimePeriodCode__c,2)=&apos;FY&apos;,
         isnumber(mid(TimePeriodCode__c,3,4))
      ),
   TRUE)))
)</errorConditionFormula>
        <errorMessage>Time Period Code must follow this format: For months: FY2015-01 for the first fiscal month in fiscal 2015. For quarters: FY2015Q1 for the first quarter in fiscal 2015. For years: FY2015 for fiscal 2015.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Time_Period_may_not_end_before_it_starts</fullName>
        <active>true</active>
        <errorConditionFormula>pse__Start_Date__c &gt; pse__End_Date__c</errorConditionFormula>
        <errorMessage>Time Period may not end before it starts</errorMessage>
    </validationRules>
</CustomObject>